Fixed Booking Confirmation alignment issue

--- a/src/global.scss
+++ b/src/global.scss
@@ -105,3 +105,7 @@ ion-toolbar {
     background-color: rgb(211, 71, 71);
     color: whitesmoke;
 }
+
+.pxApply {
+    margin-left: -1px;
+}
